--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deboxsoft/plop-generator",
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1-beta.4",
   "description": "Plop Generator to scaffold js/ts projects",
   "main": "./bin/cli.js",
   "scripts": {
@@ -60,9 +60,8 @@
     "typescript": "^4.3.5"
   },
   "files": [
-    "dist",
-    "lib",
-    "docs"
+    "*",
+    "!src"
   ],
   "directories": {
     "doc": "docs",
