--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@deboxsoft/plop-generator",
   "version": "1.0.1-beta.35",
   "description": "Plop Generator to scaffold js/ts projects",
-  "main": "./bin/cli.js",
+  "type": "module",
+  "exports": {
+    "import": "./bin/cli.js",
+    "require": "./bin/cli.cjs"
+  },
   "scripts": {
     "test": "echo Error: no test specified",
     "start": "plop",
