--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deboxsoft/plop-generator",
-  "version": "1.0.1-beta.40",
+  "version": "1.0.1-beta.49",
   "description": "Plop Generator to scaffold js/ts projects",
   "type": "module",
   "types": "libs",
@@ -25,33 +25,33 @@
   "license": "SEE LICENSE",
   "dependencies": {
     "@deboxsoft/module-core": "^2.6.41",
-    "@nurdiansyah/node-plop": "^0.31.0",
-    "@nurdiansyah/plop": "^3.1.2",
-    "dotenv": "^16.0.1",
+    "@nurdiansyah/node-plop": "^0.32.2",
+    "@nurdiansyah/plop": "^3.1.5",
+    "dotenv": "^16.0.3",
     "edit-json-file": "^1.7.0",
-    "minimist": "^1.2.6",
+    "minimist": "^1.2.7",
     "nconf": "^0.12.0",
     "nconf-yaml": "^1.0.2",
-    "node": "^18.5.0"
+    "node": "^18.11.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.11.0",
+    "@babel/types": "^7.19.4",
     "@nurdiansyah/bump": "^6.1.2",
     "@nurdiansyah/eslint-config-devel": "^8.0.3",
-    "@types/babel__generator": "^7.6.1",
-    "@types/edit-json-file": "^1.4.0",
+    "@types/babel__generator": "^7.6.4",
+    "@types/edit-json-file": "^1.7.0",
     "@types/inquirer": "^9.0.2",
-    "@types/node": "^16.11.45",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@types/node": "^16.11.68",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "chalk": "^4.1.2",
-    "eslint": "~8.17.0",
+    "eslint": "8.22.0",
     "fs": "0.0.1-security",
-    "inquirer": "^9.0.1",
+    "inquirer": "^9.1.4",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "tslib": "^2.4.0",
-    "typescript": "~4.7.3"
+    "typescript": "~4.7.4"
   },
   "files": [
     "bin",
