--- a/templates/modules/client/root/tsconfig.json
+++ b/templates/modules/client/root/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "baseUrl": ".",
     "declarationDir": "libs"
   },
