--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deboxsoft/plop-generator",
-  "version": "1.0.1-beta.67",
+  "version": "1.0.1-beta.68",
   "description": "Plop Generator to scaffold js/ts projects",
   "type": "module",
   "types": "libs",
@@ -51,7 +51,8 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "tslib": "^2.4.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.7.4",
+    "vitest": "^0.27.2"
   },
   "files": [
     "bin",
