--- a/templates/modules/client/root/package.json
+++ b/templates/modules/client/root/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@{{ organization }}/{{ kebabCase projectName}}",
+  "name": "@{{ organization }}/{{ kebabCase projectName}}-client",
   "version": "0.0.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "repository": {
@@ -42,8 +42,7 @@
     "@deboxsoft/module-client": "^2.6.21",
     "@deboxsoft/module-core": "^2.6.40",
     "@deboxsoft/svelte-core": "1.1.3-beta.12",
-    "@deboxsoft/{{ kebabCase projectName }}-api": "workspace:^",
-    "@deboxsoft/{{ kebabCase projectName }}-server": "workspace:^",
+    "@deboxsoft/{{ kebabCase projectName }}-core": "workspace:^",
     "svelte": "^3.x"
   },
   "peerDependencies": {
@@ -51,7 +50,6 @@
     "@deboxsoft/module-core": "2.x",
     "@deboxsoft/svelte-core": "1.x || 1.1.3-beta.x",
     "@deboxsoft/{{ kebabCase projectName }}-api": "workspace:^",
-    "@deboxsoft/{{ kebabCase projectName }}-server": "workspace:^",
     "svelte": "^3.x"
   }
 }
