--- a/templates/projects/monorepo/package.json
+++ b/templates/projects/monorepo/package.json
@@ -27,7 +27,6 @@
     "@types/node": "^18.6.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "ava": "^4.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "esbuild-node-loader": "^0.8.0",
@@ -45,6 +44,8 @@
     "tsup": "^6.2.3",
     "turbo": "^1.3.1",
     "typescript": "~4.7.3",
-    "yarpm": "^1.1.1"
+    "yarpm": "^1.1.1",
+    "vite": "^4.1.1",
+    "vitest": "^0.27.1"
   }
 }
