--- a/templates/projects/monorepo/package.json
+++ b/templates/projects/monorepo/package.json
@@ -20,6 +20,8 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/cz-commitlint": "^17.4.2",
     "@faker-js/faker": "^7.5.0",
     "@nurdiansyah/bump": "^6.1.2",
     "@nurdiansyah/cpx": "1.5.0",
@@ -27,11 +29,13 @@
     "@types/node": "^18.6.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "esbuild-node-loader": "^0.8.0",
     "eslint": "~8.17.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "inquirer": "8",
     "husky": "^8.0.1",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
