fix .npmrc not include

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "types.*",
     "templates",
     "templates/**/.gitignore",
+    "templates/**/.npmrc",
     "CODEOWNERS"
   ],
   "directories": {
